# d-ship-fedex_express

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
config/: parcel.example.json  shipment.example.json
contracts/agreement/: Cargo.toml  validation-tree.json
contracts/agreement/meta/: Cargo.toml
contracts/agreement/meta/src/: main.rs
contracts/agreement/src/: lib.rs
contracts/forwarder-agreement/: Cargo.toml  validation-tree.json
contracts/forwarder-agreement/meta/: Cargo.toml
contracts/forwarder-agreement/meta/src/: main.rs
contracts/forwarder-agreement/src/: lib.rs
contracts/forwarder-agreement/wasm/: Cargo.toml
contracts/forwarder-agreement/wasm/src/: lib.rs
contracts/onboarding/: Cargo.toml  validation-tree.json
contracts/onboarding/meta/: Cargo.toml
contracts/onboarding/meta/src/: main.rs
contracts/onboarding/src/: lib.rs
contracts/parcel/: Cargo.toml
contracts/parcel/meta/: Cargo.toml
contracts/parcel/meta/src/: main.rs
contracts/parcel/src/: lib.rs
contracts/parcel/wasm/: Cargo.toml
contracts/parcel/wasm/src/: lib.rs
contracts/pickup/: Cargo.toml  validation-tree.json
contracts/pickup/meta/: Cargo.toml
contracts/pickup/meta/src/: main.rs
contracts/pickup/src/: lib.rs
contracts/serial/: Cargo.toml  build.rs  validation-tree.json
contracts/serial/meta/: Cargo.toml
contracts/serial/meta/src/: main.rs
contracts/serial/src/: lib.rs
contracts/serial/wasm/: Cargo.toml
contracts/serial/wasm/src/: lib.rs
contracts/service/: Cargo.toml  validation-tree.json
contracts/service/meta/: Cargo.toml
contracts/service/meta/src/: main.rs
contracts/service/src/: lib.rs
contracts/service/wasm/: Cargo.toml
contracts/service/wasm/src/: lib.rs
contracts/shipment/: Cargo.toml  validation-tree.json
contracts/shipment/meta/: Cargo.toml
contracts/shipment/meta/src/: main.rs
contracts/shipment/src/: lib.rs
contracts/shipment/wasm/: Cargo.toml
contracts/shipment/wasm/src/: lib.rs
contracts/tracker/: Cargo.toml  validation-tree.json
contracts/tracker/meta/: Cargo.toml
contracts/tracker/meta/src/: main.rs
contracts/tracker/src/: lib.rs
contracts/tracker/wasm/: Cargo.toml
contracts/tracker/wasm/src/: lib.rs
crates/dship-common/: Cargo.toml
crates/dship-common/src/: access.rs  agreement.rs  billing.rs  crypto.rs  entities.rs  lib.rs  ownership.rs  payment.rs  storage.rs  tracking_events.rs  validation.rs
crates/dship-validation-bt/: Cargo.toml
crates/dship-validation-bt/src/: lib.rs
docs/: behavior-tree-README.md  behavior-tree-frontend-guide.md  contract-architecture-README.md  contract-method-map.md  contract-payloads.md  encryption-and-receiver-access.md  tracking-event-codes-README.md
schemas/: README.md  address.schema.json  agreement-config.schema.json  behavior-tree.example.json  behavior-tree.schema.json  parcel-item.schema.json  parcel.schema.json  party.schema.json  serial.schema.json  shipment-booking.schema.json  tracker.schema.json  tracking-event-codes.schema.json  tracking-event-definitions.json  tracking-event.schema.json
schemas/config/: parcel-config.schema.json  serial-config.schema.json  service-config.schema.json  shipment-config.schema.json  tracker-config.schema.json
scripts/: build-contract.ps1  deploy-contract.ps1
