[workspace]
resolver = "2"

members = [
    "crates/dship-common",
    "crates/dship-validation-bt",
    "contracts/shipment",
    "contracts/shipment/meta",
    "contracts/tracker",
    "contracts/tracker/meta",
    "contracts/serial",
    "contracts/serial/meta",
    "contracts/parcel",
    "contracts/parcel/meta",
    "contracts/agreement",
    "contracts/agreement/meta",
    "contracts/onboarding",
    "contracts/onboarding/meta",
    "contracts/service",
    "contracts/service/meta",
    "contracts/forwarder-agreement",
    "contracts/forwarder-agreement/meta",
    "contracts/pickup",
    "contracts/pickup/meta",
]
