[package]
name = "parcel"
version = "0.1.0"
edition = "2021"
publish = false
description = "Parcel d-app for MultiverseX shipping"

[lib]
path = "src/lib.rs"

[dependencies]
multiversx-sc = "0.57.1"
dship-common = { path = "../../crates/dship-common" }
serial = { path = "../serial" }

[dev-dependencies.multiversx-sc-scenario]
version = "0.57.1"
