[package]
name = "shipment"
version = "0.1.0"
edition = "2021"
publish = false
description = "Agreement-aware shipment creation d-app backend"

[lib]
path = "src/lib.rs"

[dependencies]
multiversx-sc = "0.57.1"
dship-common = { path = "../../crates/dship-common" }
service = { path = "../service" }
agreement = { path = "../agreement" }
serial = { path = "../serial" }
tracker = { path = "../tracker" }
parcel = { path = "../parcel" }

[dev-dependencies.multiversx-sc-scenario]
version = "0.57.1"
