[package]
name = "dship-validation-bt"
version = "0.1.0"
edition = "2021"
publish = false
description = "Behavior tree AST for d-ship validation. Serde models + compile-time BT → Rust."

[lib]
path = "src/lib.rs"

[[bin]]
name = "dship-bt-compile"
path = "src/bin/compile.rs"

[features]
default = ["bin"]
bin = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
